# ppo2048

./: README.md  pyproject.toml
.devcontainer/: .zshrc  INSTALL.md  containerfile  cuda_container.cil  devcontainer.json  requirements.txt
notebooks/: networks.ipynb  policies.ipynb  utils.ipynb
ppo2048/: agent.py  networks.py  policies.py  test_policies.py  types.py
requirements/: requirements-dev.txt  requirements.txt
src/ppo2048/: __init__.py  agent.py  networks.py  policies.py  types.py
src/rl2048/: __init__.py  actor_critic.py  decorators.py  functools.py  game.py  jumanji.py  rollout.py  types.py  utils.py
src/rl2048/agents/: __init__.py  actor_critic.py  base.py  simply.py  types.py  vgp.py
src/rl2048/critics/: __init__.py  base.py  deep.py
src/rl2048/embedders/: __init__.py  base.py  deep.py
src/rl2048/policies/: __init__.py  base.py  deep.py  naive.py  random.py
tests/: __init__.py  agents_test.py  conftest.py  critics_te_st.py  critics_test.py  decorators_test.py  embedders_test.py  functools_test.py  game_test.py  policies_test.py  rollout_test.py  test_policies.py
