[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ppo2048"
version = "0.0.1"
dependencies = ["dm-haiku", "jumanji"]
requires-python = ">=3.12"
authors = [{ name = "Avi Revah", email = "avraham.a.revah@gmail.com" }]
description = "Proximal policy optimization agents to play logic game 2048."
readme = "README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.optional-dependencies]
dev = ["chex", "ipykernel", "ruff", "mypy", "pytest"]
train = ["dvc"]

[tool.mypy]
python_version = "3.12"
exclude = ["local/*"]
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "D"]
# ignore = ["COM812", "SLF", "TCH010", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
# "local/*" = ["F401", "D", "ERA", "CPY", "T201", "ANN"]

[tool.ruff.lint.flake8-copyright]
author = "The PPO2048 Authors"
